--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         <g id="Layer_1"/>
                         </svg>                   
                     <h4 class="font-inter font-bold mb-2 ">Dine In</h4>
-                    <p class="font-inter text-justify text-sm ml-2 md:ml-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet culpa recusandae fugiat nisi exercitationem labore voluptas corrupti commodi sunt quam, necessitatibus, et, tempora ad quo nam. Consequatur praesentium at iste.</p>
+                    <p class="font-inter text-justify text-sm ml-2 md:ml-0">Step into MamaBobo Restaurant  and immerse yourself in a truly Nigerian dining experience. Our welcoming atmosphere is perfect for family meals, friendly gatherings, or a romantic dinner. Enjoy the rich tapestry of flavors that our authentic dishes offer, all served in a vibrant setting inspired by the beauty and culture of Nigeria. Whether it’s a casual lunch or a special dinner, dining with us is always an occasion to remember.</p>
                 </div>
 
                 <!----- second card-->
@@ -141,7 +141,7 @@
                         s8.853,4,8.853,8.853C218.896,138.441,214.896,142.441,210.043,142.441z"/>
                     </svg>
                     <h4 class="font-inter font-bold mb-2 ">Delivery</h4>
-                    <p class="font-inter text-justify text-sm ml-2 md:ml-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet culpa recusandae fugiat nisi exercitationem labore voluptas corrupti commodi sunt quam, necessitatibus, et, tempora ad quo nam. Consequatur praesentium at iste.</p>
+                    <p class="font-inter text-justify text-sm ml-2 md:ml-0">Savor the flavors of Nigeria from the comfort of your own home with MamaBobo’s delivery service. We’ve partnered with Just Eat and UberEats to bring you your favourite dishes quickly and conveniently. Whether you're looking for a comforting meal at home or planning a feast with friends, our delivery service ensures that every order is packed with care and delivered right to your door. Explore our menu on Just Eat and UberEats and enjoy a taste of Nigeria anytime, anywhere.</p>
                 </div>
 
                 <!---third card-->
@@ -174,7 +174,7 @@
                     </g>
                     </svg>
                     <h4 class="font-inter font-bold mb-2 ">Takeaway</h4>
-                    <p class="font-inter text-justify text-sm ml-2 md:ml-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet culpa recusandae fugiat nisi exercitationem labore voluptas corrupti commodi sunt quam, necessitatibus, et, tempora ad quo nam. Consequatur praesentium at iste.</p>
+                    <p class="font-inter text-justify text-sm ml-2 md:ml-0">Enjoy the bold and exquisite flavors of Nigeria from the comfort of your own home with MamaBobo’s takeaway service. Perfect for busy days or cozy evenings, our takeaway menu features all your favourite dishes prepared with the same care and passion as our dine-in service. Simply order your preferred meals, and we’ll have them ready for you to pick up, fresh and bursting with flavour.</p>
                 </div>
 
                 <!--- fourth card-->
@@ -234,7 +234,7 @@
                     </g>
                     </svg>
                     <h4 class="font-inter font-bold mb-2 ">Catering</h4>
-                    <p class="font-inter text-justify text-sm ml-2 md:ml-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet culpa recusandae fugiat nisi exercitationem labore voluptas corrupti commodi sunt quam, necessitatibus, et, tempora ad quo nam. Consequatur praesentium at iste.</p>
+                    <p class="font-inter text-justify text-sm ml-2 md:ml-0">At MamaBobo’s, we bring the unique flavors of Nigeria directly to your event with our bespoke catering services. Whether you are hosting a wedding, a corporate event, or a birthday, we offer customized menus that cater to a variety of tastes and dietary needs. Our dedicated team ensures that each dish is as delightful and memorable as your special occasion. Contact us to discuss how we can tailor our offerings to your event’s needs and make your gathering truly exceptional.</p>
                 </div>
             </div>
         </section>
@@ -329,7 +329,7 @@
                 </div>
                 <div class="footer_content flex flex-col mx-auto text-center mt-4 md:mt-0">
                     <h2 class="font-inter font-bold text-green-600 text-xl lg:text-2xl">Information</h2>
-                    <a href="#" class="font-inter font-bold">Allergens & Ingredients</a>
+                    <a href="templates/allergens.html" class="font-inter font-bold">Allergens & Ingredients</a>
                     <a href="#" class="font-inter font-bold">Terms And Conditions</a>
                     <a href="#" class="font-inter font-bold">Cancellation Policy</a>
                     <a href="#" class="font-inter font-bold">FAQ</a>
