--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                 <div class="md:hidden">
                     <div id="hamburger-menu" class="absolute flex-col items-center hidden self-end py-6 mt-6 space-y-6 font-bold bg-white sm:w-auto sm:self-center left-6 right-6 drop-shadow-md">
                         <a href="#">Home</a>
-                        <a href="#">Services</a>
-                        <a href="#">Menu</a>
+                        <a href="#services">Services</a>
+                        <a href="#menu">Menu</a>
                         <a href="#">Gallery</a>
-                        <a href="#">About Us</a>
-                        <a href="#">Contact Us</a>
+                        <a href="#about">About Us</a>
+                        <a href="#contact_us">Contact Us</a>
                     </div>
                 </div>
             </nav>
