--- a/menu.html
+++ b/menu.html
@@ -57,13 +57,13 @@
                     <div class="navbar-nav ms-auto py-0 pe-4">
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="service.html" class="nav-item nav-link">Service</a>
+                        <a href="services.html" class="nav-item nav-link">Services</a>
                         <a href="menu.html" class="nav-item nav-link">Menu</a>
                         <a href="booking.html" class="nav-item nav-link">Booking</a>
                         <a href="#" class="nav-item nav-link">Order</a>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
-                    <a href="" class="btn btn-primary py-2 px-4">Book A Table</a>
+                    <a href="booking.html" class="btn btn-primary py-2 px-4">Book A Table</a>
                 </div>
             </nav>
 
@@ -83,7 +83,7 @@
 
 
         <!-- Menu Start -->
-        <div class="container-xxl py-5">
+        <!-- <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h5 class="section-title ff-secondary text-center text-primary fw-normal">Food Menu</h5>
@@ -423,7 +423,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Menu End -->
         
 
@@ -432,12 +432,12 @@
             <div class="container py-5">
                 <div class="row g-5">
                     <div class="col-lg-3 col-md-6">
-                        <h5 class="section-title ff-secondary text-start text-primary fw-normal mb-4"><span class="primary_green">MamaBobo</span> Restaurant</h5>
+                        <h5 class="section-title ff-secondary text-start primary_orange fw-normal mb-4"><span class="primary_green">MamaBobo</span> Restaurant</h5>
                         <a class="btn btn-link" href="about.html">About Us</a>
                         <a class="btn btn-link" href="contact.html">Contact Us</a>
-                        <a class="btn btn-link" href="#">Reservation</a>
-                        <a class="btn btn-link" href="#">Privacy Policy</a>
-                        <a class="btn btn-link" href="#">Terms & Condition</a>
+                        <a class="btn btn-link" href="faq.html">Frequently Asked Questions</a>
+                        <a class="btn btn-link" href="privacy_policy.html">Privacy Policy</a>
+                        <a class="btn btn-link" href="terms.html">Terms & Condition</a>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h5 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Contact</h5>
@@ -471,16 +471,8 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">MamaBobo Restaurant</a>, All Right Reserved.
+                            &copy; <span>MamaBobo Restaurant</span>, All Right Reserved.
 							Developed By <a class="border-bottom" href="https://hunkutech.com"><i>HUNKUTECH</i></a>
-                        </div>
-                        <div class="col-md-6 text-center text-md-end">
-                            <div class="footer-menu">
-                                <a href="index.html">Home</a>
-                                <a href="#">Cookies</a>
-                                <a href="#">Help</a>
-                                <a href="#">FAQs</a>
-                            </div>
                         </div>
                     </div>
                 </div>
