--- a/booking.html
+++ b/booking.html
@@ -57,13 +57,13 @@
                     <div class="navbar-nav ms-auto py-0 pe-4">
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="service.html" class="nav-item nav-link">Service</a>
+                        <a href="services.html" class="nav-item nav-link">Services</a>
                         <a href="menu.html" class="nav-item nav-link">Menu</a>
                         <a href="booking.html" class="nav-item nav-link">Booking</a>
                         <a href="#" class="nav-item nav-link">Order</a>
                         <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                     </div>
-                    <a href="" class="btn btn-primary py-2 px-4">Book A Table</a>
+                    <a href="booking.html" class="btn btn-primary py-2 px-4">Book A Table</a>
                 </div>
             </nav>
 
@@ -167,12 +167,12 @@
             <div class="container py-5">
                 <div class="row g-5">
                     <div class="col-lg-3 col-md-6">
-                        <h5 class="section-title ff-secondary text-start text-primary fw-normal mb-4"><span class="primary_green">MamaBobo</span> Restaurant</h5>
+                        <h5 class="section-title ff-secondary text-start primary_orange fw-normal mb-4"><span class="primary_green">MamaBobo</span> Restaurant</h5>
                         <a class="btn btn-link" href="about.html">About Us</a>
                         <a class="btn btn-link" href="contact.html">Contact Us</a>
-                        <a class="btn btn-link" href="#">Reservation</a>
-                        <a class="btn btn-link" href="#">Privacy Policy</a>
-                        <a class="btn btn-link" href="#">Terms & Condition</a>
+                        <a class="btn btn-link" href="faq.html">Frequently Asked Questions</a>
+                        <a class="btn btn-link" href="privacy_policy.html">Privacy Policy</a>
+                        <a class="btn btn-link" href="terms.html">Terms & Condition</a>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h5 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Contact</h5>
@@ -180,7 +180,7 @@
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+44 743 641 8993</p>
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i><small>info@mamaboborestaurant.co.uk</small></p>
                         <div class="d-flex pt-2">
-                            <a class="btn btn-outline-light btn-social" href="https://www.tiktok.com/@mamaboboafrica"><i class="fab fa-tiktok" style="color: white;"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://www.tiktok.com/@mamaboboafrica"><i class="fab fa-tiktok" style="color: white !important;"></i></a>
                             <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/mamaboboafrica/"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/mamaboboafrica/"><i class="fab fa-instagram"></i></a>
                         </div>
@@ -206,16 +206,8 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">MamaBobo Restaurant</a>, All Right Reserved.
+                            &copy; <span>MamaBobo Restaurant</span>, All Right Reserved.
 							Developed By <a class="border-bottom" href="https://hunkutech.com"><i>HUNKUTECH</i></a>
-                        </div>
-                        <div class="col-md-6 text-center text-md-end">
-                            <div class="footer-menu">
-                                <a href="index.html">Home</a>
-                                <a href="#">Cookies</a>
-                                <a href="#">Help</a>
-                                <a href="#">FAQs</a>
-                            </div>
                         </div>
                     </div>
                 </div>
