--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -28,7 +28,7 @@
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Template Stylesheet -->
+    <!-- main Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
 </head>
 
@@ -61,7 +61,7 @@
                         <a href="menu.html" class="nav-item nav-link">Menu</a>
                         <a href="booking.html" class="nav-item nav-link">Booking</a>
                         <a href="#" class="nav-item nav-link">Order</a>
-                        <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+                        <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                     <a href="booking.html" class="btn btn-primary py-2 px-4">Book A Table</a>
                 </div>
@@ -69,11 +69,11 @@
 
             <div class="container-xxl py-5 bg-dark hero-header mb-5">
                 <div class="container text-center my-5 pt-5 pb-4">
-                    <h1 class="display-3 text-white mb-3 animated slideInDown">About Us</h1>
+                    <h1 class="display-3 text-white mb-3 animated slideInDown">Privacy Policy</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center text-uppercase">
                             <li class="breadcrumb-item"><a href="#">Home</a></li>
-                            <li class="breadcrumb-item text-white active" aria-current="page">About</li>
+                            <li class="breadcrumb-item text-white active" aria-current="page">Privacy Policy</li>
                         </ol>
                     </nav>
                 </div>
@@ -81,41 +81,10 @@
         </div>
         <!-- Navbar & Hero End -->
 
+        <!--- Privacy Policy Start-->
+        <div></div>
+        <!-- Privacy Policy End-->
 
-        <!-- About Start -->
-        <div class="container-xxl py-5">
-            <div class="container">
-                <div class="row g-5 align-items-center">
-                    <div class="col-lg-6">
-                        <div class="row g-3">
-                            <div class="col-6 text-start">
-                                <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.1s" src="img/about/1.jpg">
-                            </div>
-                            <div class="col-6 text-start">
-                                <img class="img-fluid rounded w-90 h-70 wow zoomIn" data-wow-delay="0.3s" src="img/about/2.jpg" style="margin-top: 25%;">
-                            </div>
-                            <div class="col-6 text-end">
-                                <img class="img-fluid rounded w-90 h-70 wow zoomIn" data-wow-delay="0.5s" src="img/about/3.jpg">
-                            </div>
-                            <div class="col-6 text-end">
-                                <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.7s" src="img/about/4.jpg">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <h5 class="section-title ff-secondary text-start text-primary fw-normal">About Us</h5>
-                        <h2 class="mb-4">Welcome to<i class="fw-bold primary_green"> MamaBobo<span class="fw-bold primary_orange"> Restaurant</span></i></h2>
-                        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos erat ipsum et lorem et sit, sed stet lorem sit.</p>
-                        <a class="btn btn-primary py-3 px-5 mt-2" href="">Read More</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- About End -->
-
-
-        
-        
 
         <!-- Footer Start -->
         <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
@@ -125,7 +94,7 @@
                         <h5 class="section-title ff-secondary text-start primary_orange fw-normal mb-4"><span class="primary_green">MamaBobo</span> Restaurant</h5>
                         <a class="btn btn-link" href="about.html">About Us</a>
                         <a class="btn btn-link" href="contact.html">Contact Us</a>
-                        <a class="btn btn-link" href="faq.html">Frequently Asked Questions</a>
+                        <a class="btn btn-link" href="faq.html">Frequently Asked Questions</Aside></a>
                         <a class="btn btn-link" href="privacy_policy.html">Privacy Policy</a>
                         <a class="btn btn-link" href="terms.html">Terms & Condition</a>
                     </div>
